added navigation for months in dashboard